# trip_agent

./: .env.example  README.md  app.py  pyproject.toml  trip_agents.py
.streamlit/: app.py  config.py  config.toml
agents/: __init__.py  main.py  trip_agents.py  trip_tasks.py
api/: auth.py  config.py  db.py  routes.py  server.py
tools/: browser_tools.py  calculator_tools.py  search_tools.py
